snomed/ecl/ECLParser.py
# Generated from ECL.g4 by ANTLR 4.7.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *
from typing.io import TextIO




class ECLParser ( Parser ):

    grammarFileName = "ECL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'\u0009'", "'\u000A'", "'\u000D'", 
                     "' '", "'!'", "'\"'", "'#'", "'$'", "'%'", "'&'", "'''", 
                     "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", 
                     "'0'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", 
                     "'8'", "'9'", "':'", "';'", "'<'", "'='", "'>'", "'?'", 
                     "'@'", "'A'", "'B'", "'C'", "'D'", "'E'", "'F'", "'G'", 
                     "'H'", "'I'", "'J'", "'K'", "'L'", "'M'", "'N'", "'O'", 
                     "'P'", "'Q'", "'R'", "'S'", "'T'", "'U'", "'V'", "'W'", 
                     "'X'", "'Y'", "'Z'", "'['", "'\\'", "']'", "'^'", "'_'", 
                     "'`'", "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", 
                     "'h'", "'i'", "'j'", "'k'", "'l'", "'m'", "'n'", "'o'", 
                     "'p'", "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", 
                     "'x'", "'y'", "'z'", "'{'", "'|'", "'}'", "'~'" ]

    symbolicNames = [ "<INVALID>", "UTF8_LETTER", "TAB", "LF", "CR", "SPACE", 
                      "EXCLAMATION", "QUOTE", "POUND", "DOLLAR", "PERCENT", 
                      "AMPERSAND", "APOSTROPHE", "LEFT_PAREN", "RIGHT_PAREN", 
                      "ASTERISK", "PLUS", "COMMA", "DASH", "PERIOD", "SLASH", 
                      "ZERO", "ONE", "TWO", "THREE", "FOUR", "FIVE", "SIX", 
                      "SEVEN", "EIGHT", "NINE", "COLON", "SEMICOLON", "LESS_THAN", 
                      "EQUALS", "GREATER_THAN", "QUESTION", "AT", "CAP_A", 
                      "CAP_B", "CAP_C", "CAP_D", "CAP_E", "CAP_F", "CAP_G", 
                      "CAP_H", "CAP_I", "CAP_J", "CAP_K", "CAP_L", "CAP_M", 
                      "CAP_N", "CAP_O", "CAP_P", "CAP_Q", "CAP_R", "CAP_S", 
                      "CAP_T", "CAP_U", "CAP_V", "CAP_W", "CAP_X", "CAP_Y", 
                      "CAP_Z", "LEFT_BRACE", "BACKSLASH", "RIGHT_BRACE", 
                      "CARAT", "UNDERSCORE", "ACCENT", "A", "B", "C", "D", 
                      "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", 
                      "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", 
                      "Y", "Z", "LEFT_CURLY_BRACE", "PIPE", "RIGHT_CURLY_BRACE", 
                      "TILDE" ]

    RULE_expressionconstraint = 0
    RULE_refinedexpressionconstraint = 1
    RULE_compoundexpressionconstraint = 2
    RULE_conjunctionexpressionconstraint = 3
    RULE_disjunctionexpressionconstraint = 4
    RULE_exclusionexpressionconstraint = 5
    RULE_dottedexpressionconstraint = 6
    RULE_dottedexpressionattribute = 7
    RULE_subexpressionconstraint = 8
    RULE_eclfocusconcept = 9
    RULE_dot = 10
    RULE_memberof = 11
    RULE_eclconceptreference = 12
    RULE_conceptid = 13
    RULE_term = 14
    RULE_wildcard = 15
    RULE_constraintoperator = 16
    RULE_descendantof = 17
    RULE_descendantorselfof = 18
    RULE_childof = 19
    RULE_ancestorof = 20
    RULE_ancestororselfof = 21
    RULE_parentof = 22
    RULE_conjunction = 23
    RULE_disjunction = 24
    RULE_exclusion = 25
    RULE_eclrefinement = 26
    RULE_conjunctionrefinementset = 27
    RULE_disjunctionrefinementset = 28
    RULE_subrefinement = 29
    RULE_eclattributeset = 30
    RULE_conjunctionattributeset = 31
    RULE_disjunctionattributeset = 32
    RULE_subattributeset = 33
    RULE_eclattributegroup = 34
    RULE_eclattribute = 35
    RULE_cardinality = 36
    RULE_minvalue = 37
    RULE_to = 38
    RULE_maxvalue = 39
    RULE_many = 40
    RULE_reverseflag = 41
    RULE_eclattributename = 42
    RULE_expressioncomparisonoperator = 43
    RULE_numericcomparisonoperator = 44
    RULE_stringcomparisonoperator = 45
    RULE_numericvalue = 46
    RULE_stringvalue = 47
    RULE_integervalue = 48
    RULE_decimalvalue = 49
    RULE_nonnegativeintegervalue = 50
    RULE_sctid = 51
    RULE_ws = 52
    RULE_mws = 53
    RULE_comment = 54
    RULE_nonstarchar = 55
    RULE_starwithnonfslash = 56
    RULE_nonfslash = 57
    RULE_sp = 58
    RULE_htab = 59
    RULE_cr = 60
    RULE_lf = 61
    RULE_qm = 62
    RULE_bs = 63
    RULE_digit = 64
    RULE_zero = 65
    RULE_digitnonzero = 66
    RULE_nonwsnonpipe = 67
    RULE_anynonescapedchar = 68
    RULE_escapedchar = 69

    ruleNames =  [ "expressionconstraint", "refinedexpressionconstraint", 
                   "compoundexpressionconstraint", "conjunctionexpressionconstraint", 
                   "disjunctionexpressionconstraint", "exclusionexpressionconstraint", 
                   "dottedexpressionconstraint", "dottedexpressionattribute", 
                   "subexpressionconstraint", "eclfocusconcept", "dot", 
                   "memberof", "eclconceptreference", "conceptid", "term", 
                   "wildcard", "constraintoperator", "descendantof", "descendantorselfof", 
                   "childof", "ancestorof", "ancestororselfof", "parentof", 
                   "conjunction", "disjunction", "exclusion", "eclrefinement", 
                   "conjunctionrefinementset", "disjunctionrefinementset", 
                   "subrefinement", "eclattributeset", "conjunctionattributeset", 
                   "disjunctionattributeset", "subattributeset", "eclattributegroup", 
                   "eclattribute", "cardinality", "minvalue", "to", "maxvalue", 
                   "many", "reverseflag", "eclattributename", "expressioncomparisonoperator", 
                   "numericcomparisonoperator", "stringcomparisonoperator", 
                   "numericvalue", "stringvalue", "integervalue", "decimalvalue", 
                   "nonnegativeintegervalue", "sctid", "ws", "mws", "comment", 
                   "nonstarchar", "starwithnonfslash", "nonfslash", "sp", 
                   "htab", "cr", "lf", "qm", "bs", "digit", "zero", "digitnonzero", 
                   "nonwsnonpipe", "anynonescapedchar", "escapedchar" ]

    EOF = Token.EOF
    UTF8_LETTER=1
    TAB=2
    LF=3
    CR=4
    SPACE=5
    EXCLAMATION=6
    QUOTE=7
    POUND=8
    DOLLAR=9
    PERCENT=10
    AMPERSAND=11
    APOSTROPHE=12
    LEFT_PAREN=13
    RIGHT_PAREN=14
    ASTERISK=15
    PLUS=16
    COMMA=17
    DASH=18
    PERIOD=19
    SLASH=20
    ZERO=21
    ONE=22
    TWO=23
    THREE=24
    FOUR=25
    FIVE=26
    SIX=27
    SEVEN=28
    EIGHT=29
    NINE=30
    COLON=31
    SEMICOLON=32
    LESS_THAN=33
    EQUALS=34
    GREATER_THAN=35
    QUESTION=36
    AT=37
    CAP_A=38
    CAP_B=39
    CAP_C=40
    CAP_D=41
    CAP_E=42
    CAP_F=43
    CAP_G=44
    CAP_H=45
    CAP_I=46
    CAP_J=47
    CAP_K=48
    CAP_L=49
    CAP_M=50
    CAP_N=51
    CAP_O=52
    CAP_P=53
    CAP_Q=54
    CAP_R=55
    CAP_S=56
    CAP_T=57
    CAP_U=58
    CAP_V=59
    CAP_W=60
    CAP_X=61
    CAP_Y=62
    CAP_Z=63
    LEFT_BRACE=64
    BACKSLASH=65
    RIGHT_BRACE=66
    CARAT=67
    UNDERSCORE=68
    ACCENT=69
    A=70
    B=71
    C=72
    D=73
    E=74
    F=75
    G=76
    H=77
    I=78
    J=79
    K=80
    L=81
    M=82
    N=83
    O=84
    P=85
    Q=86
    R=87
    S=88
    T=89
    U=90
    V=91
    W=92
    X=93
    Y=94
    Z=95
    LEFT_CURLY_BRACE=96
    PIPE=97
    RIGHT_CURLY_BRACE=98
    TILDE=99

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionconstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLParser.WsContext,i)


        def EOF(self):
            return self.getToken(ECLParser.EOF, 0)

        def refinedexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.RefinedexpressionconstraintContext,0)


        def compoundexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.CompoundexpressionconstraintContext,0)


        def dottedexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.DottedexpressionconstraintContext,0)


        def subexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.SubexpressionconstraintContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_expressionconstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionconstraint" ):
                listener.enterExpressionconstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionconstraint" ):
                listener.exitExpressionconstraint(self)




    def expressionconstraint(self):

        localctx = ECLParser.ExpressionconstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expressionconstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.ws()
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 141
                self.refinedexpressionconstraint()
                pass

            elif la_ == 2:
                self.state = 142
                self.compoundexpressionconstraint()
                pass

            elif la_ == 3:
                self.state = 143
                self.dottedexpressionconstraint()
                pass

            elif la_ == 4:
                self.state = 144
                self.subexpressionconstraint()
                pass


            self.state = 147
            self.ws()
            self.state = 148
            self.match(ECLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RefinedexpressionconstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.SubexpressionconstraintContext,0)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLParser.WsContext,i)


        def COLON(self):
            return self.getToken(ECLParser.COLON, 0)

        def eclrefinement(self):
            return self.getTypedRuleContext(ECLParser.EclrefinementContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_refinedexpressionconstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRefinedexpressionconstraint" ):
                listener.enterRefinedexpressionconstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRefinedexpressionconstraint" ):
                listener.exitRefinedexpressionconstraint(self)




    def refinedexpressionconstraint(self):

        localctx = ECLParser.RefinedexpressionconstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_refinedexpressionconstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.subexpressionconstraint()
            self.state = 151
            self.ws()
            self.state = 152
            self.match(ECLParser.COLON)
            self.state = 153
            self.ws()
            self.state = 154
            self.eclrefinement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundexpressionconstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conjunctionexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.ConjunctionexpressionconstraintContext,0)


        def disjunctionexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.DisjunctionexpressionconstraintContext,0)


        def exclusionexpressionconstraint(self):
            return self.getTypedRuleContext(ECLParser.ExclusionexpressionconstraintContext,0)


        def getRuleIndex(self):
            return ECLParser.RULE_compoundexpressionconstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundexpressionconstraint" ):
                listener.enterCompoundexpressionconstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundexpressionconstraint" ):
                listener.exitCompoundexpressionconstraint(self)




    def compoundexpressionconstraint(self):

        localctx = ECLParser.CompoundexpressionconstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_compoundexpressionconstraint)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.conjunctionexpressionconstraint()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.disjunctionexpressionconstraint()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.exclusionexpressionconstraint()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConjunctionexpressionconstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexpressionconstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.SubexpressionconstraintContext)
            else:
                return self.getTypedRuleContext(ECLParser.SubexpressionconstraintContext,i)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLParser.WsContext,i)


        def conjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.ConjunctionContext)
            else:
                return self.getTypedRuleContext(ECLParser.ConjunctionContext,i)


        def getRuleIndex(self):
            return ECLParser.RULE_conjunctionexpressionconstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConjunctionexpressionconstraint" ):
                listener.enterConjunctionexpressionconstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConjunctionexpressionconstraint" ):
                listener.exitConjunctionexpressionconstraint(self)




    def conjunctionexpressionconstraint(self):

        localctx = ECLParser.ConjunctionexpressionconstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_conjunctionexpressionconstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.subexpressionconstraint()
            self.state = 167 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 162
                    self.ws()
                    self.state = 163
                    self.conjunction()
                    self.state = 164
                    self.ws()
                    self.state = 165
                    self.subexpressionconstraint()

                else:
                    raise NoViableAltException(self)
                self.state = 169 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisjunctionexpressionconstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexpressionconstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.SubexpressionconstraintContext)
            else:
                return self.getTypedRuleContext(ECLParser.SubexpressionconstraintContext,i)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLParser.WsContext,i)


        def disjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.DisjunctionContext)
            else:
                return self.getTypedRuleContext(ECLParser.DisjunctionContext,i)


        def getRuleIndex(self):
            return ECLParser.RULE_disjunctionexpressionconstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisjunctionexpressionconstraint" ):
                listener.enterDisjunctionexpressionconstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisjunctionexpressionconstraint" ):
                listener.exitDisjunctionexpressionconstraint(self)




    def disjunctionexpressionconstraint(self):

        localctx = ECLParser.DisjunctionexpressionconstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_disjunctionexpressionconstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.subexpressionconstraint()
            self.state = 177 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 172
                    self.ws()
                    self.state = 173
                    self.disjunction()
                    self.state = 174
                    self.ws()
                    self.state = 175
                    self.subexpressionconstraint()

                else:
                    raise NoViableAltException(self)
                self.state = 179 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExclusionexpressionconstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexpressionconstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.SubexpressionconstraintContext)
            else:
                return self.getTypedRuleContext(ECLParser.SubexpressionconstraintContext,i)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ECLParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLParser.WsContext,i)


        def exclusion(self):
            return self.getTypedRuleContext(ECLParser.ExclusionContext,0)

